# mlops_lab1

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml
configs/: config.yaml
outputs/: best_model.pth
src/: dataset.py  model.py  pipeline.py
